--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ env:
   DISPLAY=':99.0'
 before_script:
   - "sh -e /etc/init.d/xvfb start"
+  - "foreman start &"
+  - "eval `bundle exec rake test:dependencies:cas`"
 rvm:
   - rbx-19mode
   - jruby
