--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ env:
   DISPLAY=':99.0'
 before_script:
   - "sh -e /etc/init.d/xvfb start"
-  - "foreman start &"
+  - "bundle exec foreman start &"
   - "eval `bundle exec rake test:dependencies:cas`"
 rvm:
   - rbx-19mode
