Fix up CI procedure.
In particular:

1. We now download the Jasig CAS Server and dependencies separately.
   Download could take a while, but it's not something that Pancakes'
   test runner should treat as a timeout condition.

2. Redirect foreman output to a log.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ env:
   DISPLAY=':99.0'
 before_script:
   - "sh -e /etc/init.d/xvfb start"
-  - "bundle exec foreman start &"
-  - "eval `bundle exec rake test:dependencies:cas`"
+  - "bundle exec rake castanet:testing:jasig:download"
+  - "bundle exec foreman start > /tmp/foreman.log 2>&1 &"
 rvm:
   - rbx-19mode
   - jruby
