--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ env:
 before_script:
   - "sh -e /etc/init.d/xvfb start"
   - "bundle exec rake castanet:testing:jasig:download"
-  - "bundle exec foreman start > /tmp/foreman.log 2>&1 &"
+  - "bundle exec rake devenv:clean"
+  - "bundle exec rake devenv > /tmp/foreman.log 2>&1 &"
 rvm:
   - rbx-19mode
   - jruby
