--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,6 @@
 development:
-  adapter: sqlite3
+  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>sqlite3
   database: db/development.sqlite
 test:
-  adapter: sqlite3
+  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>sqlite3
   database: db/test.sqlite
