--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor/assets/javascripts/underscore"]
 	path = vendor/assets/javascripts/underscore
 	url = https://github.com/documentcloud/underscore.git
+[submodule "vendor/assets/javascripts/SlickGrid"]
+	path = vendor/assets/javascripts/SlickGrid
+	url = https://github.com/mleibman/SlickGrid.git
