Switch to PostgreSQL for development and test.
I was starting to hit locking problems with SQLite when running lots of
jobs to e.g. stress-test the search worker.

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,15 @@
 development:
-  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>sqlite3
-  database: db/development.sqlite
+  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>postgresql
+  database: ncs_navigator_pancakes
+  username: ncs_navigator_pancakes
+  password: ncs_navigator_pancakes
+  host: localhost
+  pool: 20
+
 test:
-  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>sqlite3
-  database: db/test.sqlite
+  adapter: <%= 'jdbc' if RUBY_PLATFORM =~ /java/ %>postgresql
+  database: ncs_navigator_pancakes_test
+  username: ncs_navigator_pancakes_test
+  password: ncs_navigator_pancakes_test
+  host: localhost
+  pool: 20
