Accept configuration from Aker and bcdatabase files.

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,3 +22,5 @@ test:
 
 <%= bcdb.ci :public_ci_postgresql9, :ncs_navigator_pancakes %>
 <%= bcdb.production :ncsdb_prod, :ncs_navigator_pancakes %>
+<%= bcdb.redis_development :local_redis, :ncs_navigator_pancakes %>
+<%= bcdb.redis_production :ncsredis_prod, :ncs_navigator_pancakes %>
