--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,8 @@ test:
   pool: 20
 
 <%= bcdb.ci :public_ci_postgresql9, :ncs_navigator_pancakes %>
+<%= bcdb.staging :ncsdb_staging, :ncs_navigator_pancakes %>
 <%= bcdb.production :ncsdb_prod, :ncs_navigator_pancakes %>
 <%= bcdb.redis_development :local_redis, :ncs_navigator_pancakes %>
+<%= bcdb.redis_staging :ncsredis_staging, :ncs_navigator_pancakes %>
 <%= bcdb.redis_production :ncsredis_prod, :ncs_navigator_pancakes %>
